Transfer the cmx transfromation graph earlier so that, the chain pipelining pass can handle the chain with no cmx->ddr dmas

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -46,6 +46,7 @@
               "name" : "ChainPipeliningTransform",
               "select_stages" : 2
             },
+            "PipeLineAcrossParallelBranches",
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
               "ddr_address_generation" : true,
