Add vpux-net-test tool as single image network test

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -18,6 +18,7 @@ if(UNIX)
 endif()
 
 add_subdirectory(test_classification)
+add_subdirectory(single-image-test)
 
 if(ENABLE_EXPERIMENTAL_MLIR)
     add_subdirectory(experimental)
