HW data type incompatibility report

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -213,6 +213,7 @@ set(pass
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/convert_to_task_graph.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/task_multiple_postops.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/bias_fixed_point_compute.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/ensure_dtype_compatibility.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/task_memory_location.cpp"
 
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/strategy_from_layers_to_tensors.cpp"
