--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
@@ -7,7 +7,7 @@
             "StoreWorkloadStrategy",
             "LoadPWLQuantParams",
             "ConvertOpsToTasks",
-            "AdaptFixedPointCompute",
+	    "AdaptFixedPointCompute",
             "SetUpPPETasks",
             "TaskMultiplePostOps",
             "ForceSerialize",
@@ -30,7 +30,8 @@
             "SplittingTensorsAcrossClusters",
             "KMBQuantizeConversion",
             "ConfigureOutputPrecision",
-            "FuseConcats"
+            "FuseConcats",
+	    "EnsureDTypeCompatibility"
         ]
     },
     "finalize": {
