--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -8,7 +8,7 @@
             "StoreWorkloadStrategy",
             "LoadPWLQuantParams",
             "ConvertOpsToTasks",
-            "AdaptFixedPointCompute",
+	    "AdaptFixedPointCompute",
             "SetUpPPETasks",
             "TaskMultiplePostOps",
             "ForceSerialize",
@@ -32,7 +32,8 @@
             "ImplicitOutputDTypeUpdate",
             "KMBQuantizeConversion",
             "ConfigureOutputPrecision",
-            "FuseConcats"
+            "FuseConcats",
+            "EnsureDTypeCompatibility"
         ]
     },
     "finalize": {
