--- a/src/mcmCompiler/config/compilation/release_mtl.json
+++ b/src/mcmCompiler/config/compilation/release_mtl.json
@@ -216,6 +216,26 @@
                                 {"name" : "weightsSparsity",                      "value" : false},
                                 {"name" : "pipelining",                           "value" : false}
                             ]
+                        },
+                        {
+                            "name" : "Input",
+                            "strategies": [
+                                {"name" : "streamingStrategies",  "value" : []},
+                                {"name" : "clusteringStrategies", "value" : ["Clustering", "SplitOverK", "SplitOverH"]},
+                                {"name" : "inputActivationSparsity",             "value" : false},
+                                {"name" : "outputActivationSparsity",             "value" : false},
+                                {"name" : "weightsSparsity",                      "value" : false}
+                            ]
+                        },
+                        {
+                            "name" : "ImplicitInput",
+                            "strategies": [
+                                {"name" : "streamingStrategies",  "value" : []},
+                                {"name" : "clusteringStrategies", "value" : ["Clustering", "SplitOverK", "SplitOverH"]},
+                                {"name" : "inputActivationSparsity",             "value" : false},
+                                {"name" : "outputActivationSparsity",             "value" : false},
+                                {"name" : "weightsSparsity",                      "value" : false}
+                            ]
                         }
                     ]
                 }
