Recorded model config options in compilation descriptor - release branch

--- a/src/mcmCompiler/config/compilation/release_kmb.json
+++ b/src/mcmCompiler/config/compilation/release_kmb.json
@@ -3,6 +3,8 @@
         "Singular": [
             {
                 "name" : "GlobalConfigParams",
+                "recorded_model": false,
+                "recordWeightsAsText": false,
                 "referenceDevice": "A0",
                 "systemClockMhz" : 500,
                 "memoryBandwidth" : 16,
