--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -3,6 +3,8 @@
         "Singular": [
             {
                 "name" : "GlobalConfigParams",
+                "recorded_model": false,
+                "recordWeightsAsText": false,
                 "referenceDevice": "A0",
                 "Number_of_DPUs" : 20,
                 "Number_of_Clusters" : 4,
