Remove align width condition for DW -> Crop -> DMA sequences; when in CHmin and cropping along the channel dimension, the strides are computed incorrectly

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -35,11 +35,13 @@
                 "VersionPatch": 0,
                 "VersionHash": "9aa43159420c77d8cf765393954ac2fbb372ab02"
             },
-            "UseReferenceOps"
+            "UseReferenceOps",
+	    "CollapseBranchedScale"
         ]
     },
     "quantization" : {
         "Singular" : [
+            "ResolveFQAfterBranchingSlices",
             "FakeQuantize"
         ]
     },
