added new pass for k streaming

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -143,6 +143,7 @@
                 }
             },
             "StoreGraphOptimizerDecisions",
+            "ValidateStreamingOverKForChainPipelining",
             "ComputeSparsitySolution",
             "StreamingOperations",
             "StreamBinaryDataWeights",
