adding streaming activations for perf

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -143,6 +143,7 @@
                 }
             },
             "StoreGraphOptimizerDecisions",
+            "AddActivationStreaming",
             "ValidateStreamingOverKForChainPipelining",
             "ComputeSparsitySolution",
             "StreamingOperations",
