Handle input precision decision and conversion insertion in mcmCompiler as a new pass

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -10,6 +10,7 @@
             },
             "AssignInputNode",
             "AssignOutputNode",
+            "DecideComputePrecision",
             "AssignUniqueOpId",
             {
                 "name": "ApplyTargetVars",
