Handle input precision decision and conversion insertion in mcmCompiler as a new pass

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -11,6 +11,7 @@
             "AssignInputNode",
             "AssignOutputNode",
             "ComputeMemory",
+            "DecideComputePrecision",
             "AssignUniqueOpId",
             {
                 "name": "ApplyTargetVars",
