--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -149,6 +149,7 @@
                 "name" : "AddActivationStreaming",
                 "max_streams" : 1000
             },
+            "ValidateStreamingOverKForChainPipelining",
             "ComputeSparsitySolution",
             "StreamingOperations",
             "StreamBinaryDataWeights",
