KMB plugin G-API preproc, extraction original blob dimensions from VPUXRemoteBlob:
* Added some comments
* Small clean-up

--- a/src/vpux_plugin/preproc_gapi/CMakeLists.txt
+++ b/src/vpux_plugin/preproc_gapi/CMakeLists.txt
@@ -43,6 +43,7 @@ link_system_libraries(${GAPI_LIB}
         kmb_utils
         ${GAPI_SIPP_LIBRARY}
         ${GAPI_M2I_LIBRARY}
+        vpux_al
         )
 
 if(ENABLE_CLANG_FORMAT)
