--- a/src/experimental/vpux_compiler/CMakeLists.txt
+++ b/src/experimental/vpux_compiler/CMakeLists.txt
@@ -174,6 +174,7 @@ add_op_interfaces("core")
 
 add_dialect("IE")
 add_enum_attrs("IE")
+add_struct_attrs("IE")
 add_passes("dialect/IE" "IE")
 add_rewriters("dialect/IE")
 
