Adding check for number of streams added as slows loading time of RT

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -143,7 +143,10 @@
                 }
             },
             "StoreGraphOptimizerDecisions",
-            "AddActivationStreaming",
+            {
+                "name" : "AddActivationStreaming",
+                "max_streams" : 1000
+            },
             "ComputeSparsitySolution",
             "StreamingOperations",
             "StreamBinaryDataWeights",
