update CD with emul flag

--- a/src/mcmCompiler/config/compilation/release_kmb.json
+++ b/src/mcmCompiler/config/compilation/release_kmb.json
@@ -5,6 +5,7 @@
                 "name" : "GlobalConfigParams",
                 "recorded_model": false,
                 "recordWeightsAsText": false,
+                "emulator_results": true,
                 "referenceDevice": "A0",
                 "systemClockMhz" : 500,
                 "memoryBandwidth" : 16,
