MTL compilation tests: disable ResNet, enable SqueezeNet

--- a/src/mcmCompiler/config/compilation/release_mtl.json
+++ b/src/mcmCompiler/config/compilation/release_mtl.json
@@ -83,6 +83,7 @@
             },
             "AssignInputNode",
             "AssignOutputNode",
+            "ComputeMemory",
             "AssignUniqueOpId",
             {
                 "name": "ApplyTargetVars",
