--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -82,6 +82,7 @@
             },
             "AssignInputNode",
             "AssignOutputNode",
+            "ComputeMemory",
             "AssignUniqueOpId",
             {
                 "name": "ApplyTargetVars",
