--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -144,6 +144,10 @@
                 }
             },
             "StoreGraphOptimizerDecisions",
+            {
+                "name" : "AddActivationStreaming",
+                "max_streams" : 1000
+            },
             "ComputeSparsitySolution",
             "StreamingOperations",
             "StreamBinaryDataWeights",
