--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -57,6 +57,7 @@
             "PreprocessForPWL",
             "CheckPWLForRequantize",
             "ConvDilationUsingStorageElement",
+            "TileOps",
             "HandleGroupConvolution",
             "StreamBinaryDataWeights",
             "DecideOutputDataType",
