--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -148,7 +148,7 @@
                 "name" : "AddActivationStreaming",
                 "max_streams" : 1000
             },
-            "ValidateStreamingOverKForChainPipelining",
+            "StreamingForPerformance",
             "ComputeSparsitySolution",
             "StreamingOperations",
             "StreamBinaryDataWeights",
