Enable weights sparsity on at global level for all CM and ZM multicluster compilation

--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -23,7 +23,7 @@
                 "enableStreaming": true,
                 "enablePipelining": true,
                 "enablePrefetching": true,
-                "enableWeightsSparsity": false,
+                "enableWeightsSparsity": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
