--- a/src/mcmCompiler/config/compilation/release_kmb.json
+++ b/src/mcmCompiler/config/compilation/release_kmb.json
@@ -27,7 +27,7 @@
                 "enableStreaming": true,
                 "enablePipelining": true,
                 "enablePrefetching": true,
-                "enableWeightsSparsity": false,
+                "enableWeightsSparsity": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
