--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -178,8 +178,12 @@
               "real_physical_barriers": 32,
               "barrier_bound": 16,
               "producer_bound" : 256,
-              "remove_barriers_in_upa_tail" : true,
-              "remove_redundant_wait_barriers" : true
+              "remove_barriers_in_upa_tail" : false,
+              "remove_redundant_wait_barriers" : false
+            },
+            {
+                "name" : "AddDPUTasksProfilingDMA",
+                "force_profiling" : false
             },
             "LayoutDMA"
         ]
