--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -146,11 +146,15 @@ set(base
     "${PROJECT_SOURCE_DIR}/src/utils/compression/hde.cpp"
     "${PROJECT_SOURCE_DIR}/src/utils/helpers.cpp"
     "${PROJECT_SOURCE_DIR}/src/utils/profiling_parser.cpp"
+    "${PROJECT_SOURCE_DIR}/src/utils/compression/btc.cpp"
 
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/Huffman.cpp"
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/huffmanCodec.cpp"
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/logging.cpp"
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/ms_vasprintf.cpp"
+
+    "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/src/bitCompactor.cpp"
+    "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/src/bitCompactorCodec.cpp"
 )
 
 set(model
@@ -354,6 +358,7 @@ target_include_directories(mcmCompiler
         "${PROJECT_SOURCE_DIR}/src"
         "${PROJECT_SOURCE_DIR}/src/pass"
         "${PROJECT_SOURCE_DIR}/include/huffman_encoding"
+        "${PROJECT_SOURCE_DIR}/include/bitcompactor"
 )
 
 target_link_libraries(mcmCompiler
